--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,8 +1,10 @@
 server {
     listen 80;
     index index.php index.html;
-    root /var/www/public;
-    client_max_body_size 32M;
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
+    root /var/www/html;
+    client_max_body_size 128M;
 
     location / {
         try_files $uri /index.php?$args;
